# FluxEncrypt

./: .clippy.toml  .dockerignore  .gitignore  .rustfmt.toml  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  RELEASE_NOTES.md  TEST_REPORT.md  crates.js  deny.toml  help.html  index.html  search-index.js  settings.html  simple_validation.rs  src-files.js  test_rsa_security.rs  validate_changes.rs  wget-log
.config/: proptest.toml
.github/workflows/: auto-release.yml  ci.yml  codeql.yml  docs.yml  release.yml  security.yml
dev/bench/: data.js
docker/: Dockerfile  Dockerfile.alpine  docker-compose.yml
docs/v0.3.9/: help.html  search-index.js  settings.html
docs/v0.7.1/: help.html  settings.html
docs/v0.7.2/: help.html  src-files.js
fluxencrypt/: Cargo.toml  all.html  constant.VERSION.html  fn.cryptum.html  index.html  sidebar-items.js  struct.Cryptum.html  struct.CryptumBuilder.html  test_rsa_security.rs
fluxencrypt-async/: Cargo.toml
fluxencrypt-async/src/: futures.rs  lib.rs  tokio.rs
fluxencrypt-cli/: Cargo.toml
fluxencrypt-cli/src/: main.rs
fluxencrypt-cli/src/commands/: batch.rs  benchmark.rs  config.rs  decrypt.rs  encrypt.rs  info.rs  keygen.rs  mod.rs  stream.rs  verify.rs
fluxencrypt-cli/src/utils/: mod.rs
fluxencrypt-cli/tests/: cli_integration_test.rs
fluxencrypt/benches/: encryption_benchmarks.rs
fluxencrypt/config/: enum.CipherSuite.html  enum.Compression.html  enum.KeyDerivation.html  enum.RsaKeySize.html  index.html  struct.Config.html  struct.ConfigBuilder.html
fluxencrypt/encryption/: index.html  sidebar-items.js
fluxencrypt/encryption/aes_gcm/: index.html  sidebar-items.js  struct.AesGcmCipher.html  struct.AesKey.html
fluxencrypt/encryption/hybrid/: index.html  struct.HybridCipher.html
fluxencrypt/encryption/rsa_oaep/: index.html  sidebar-items.js  struct.RsaOaepCipher.html
fluxencrypt/env/: index.html  sidebar-items.js
fluxencrypt/env/provider/: index.html  struct.EnvSecretProvider.html  struct.EnvSecretProviderBuilder.html
fluxencrypt/env/secrets/: enum.SecretFormat.html  fn.load_env_secret.html  fn.load_env_secret_with_format.html  index.html  struct.EnvSecret.html
fluxencrypt/error/: enum.FluxError.html  index.html  type.Result.html
fluxencrypt/examples/: basic_encryption.rs  environment_config.rs  file_encryption.rs  key_management.rs
fluxencrypt/keys/: index.html  sidebar-items.js
fluxencrypt/keys/generation/: index.html  sidebar-items.js  struct.KeyPair.html  struct.PrivateKey.html  struct.PublicKey.html
fluxencrypt/keys/key_pair/: index.html  struct.KeyPair.html
fluxencrypt/keys/parsing/: enum.KeyFormat.html  fn.parse_encrypted_private_key_from_str.html  fn.parse_private_key_from_str.html  fn.parse_public_key_from_str.html  index.html  sidebar-items.js  struct.KeyParser.html
fluxencrypt/keys/private_key/: index.html  struct.PrivateKey.html
fluxencrypt/keys/public_key/: index.html  struct.PublicKey.html
fluxencrypt/keys/storage/: fn.load_keypair_default.html  fn.save_keypair_default.html  index.html  sidebar-items.js  struct.KeyStorage.html  struct.StorageOptions.html
fluxencrypt/src/: config.rs  error.rs  lib.rs  symmetric.rs
fluxencrypt/src/encryption/: aes_gcm.rs  hybrid.rs  mod.rs  rsa_oaep.rs
fluxencrypt/src/env/: mod.rs  provider.rs  secrets.rs
fluxencrypt/src/keys/: generation.rs  key_pair.rs  mod.rs  parsing.rs  private_key.rs  public_key.rs  storage.rs
fluxencrypt/src/stream/: batch.rs  cipher.rs  mod.rs
fluxencrypt/stream/: index.html  sidebar-items.js
fluxencrypt/stream/batch/: index.html  sidebar-items.js  struct.BatchConfig.html  struct.BatchProcessor.html  struct.BatchResult.html
fluxencrypt/stream/cipher/: index.html  struct.FileStreamCipher.html  struct.StreamCipher.html  type.ProgressCallback.html
fluxencrypt/symmetric/: index.html  sidebar-items.js  struct.SymmetricCipher.html
fluxencrypt/tests/: base64_integration_test.rs
fluxencrypt_async/: all.html  constant.VERSION.html  index.html  sidebar-items.js  struct.Config.html
fluxencrypt_async/futures/: fn.retry_with_backoff.html  fn.spawn_blocking_encryption.html  fn.with_timeout.html  fn.yield_now.html  index.html  sidebar-items.js  struct.AsyncBatch.html  struct.AsyncProgressTracker.html  struct.DecryptionFuture.html  struct.EncryptionFuture.html
fluxencrypt_async/tokio/: fn.decrypt_multiple_async.html  fn.encrypt_multiple_async.html  index.html  sidebar-items.js  struct.AsyncFileStreamCipher.html  struct.AsyncHybridCipher.html  type.AsyncProgressCallback.html
fluxencrypt_cli/: all.html  enum.Commands.html  fn.init_logging.html  fn.main.html  fn.print_banner.html  index.html  sidebar-items.js  struct.Cli.html
fluxencrypt_cli/commands/: index.html  sidebar-items.js  type.CommandResult.html
fluxencrypt_cli/utils/: fn.confirm_overwrite.html  fn.convert_key_data_to_string.html  fn.create_output_directory.html  fn.decode_key_data_if_needed.html  fn.is_direct_key_data.html  fn.is_encrypted_key.html  fn.load_key_data.html  fn.load_key_from_env.html  fn.load_private_key.html  fn.load_public_key.html  (+9 more)
search.index/: 00599320ebfe.js  00a29c7bc3d5.js  017c4319cfff.js  01b7bde447a9.js  026c1429f7c7.js  029fe6f590a8.js  02cdbf37b2f0.js  02d9cca9e013.js  0322b5297820.js  03af25f7570a.js  041816ee0a04.js  043b9e2eede9.js  0753faca1625.js  0788bd731490.js  0a70613a38f8.js  0ae95902bdf9.js  0b41fe5e22d9.js  0c683b6cd971.js  0c970f7d4de1.js  0d31bfe4aec2.js  0d8bfbd4dcdf.js  0de66a80c768.js  0e439a74c053.js  0eaf86f36f27.js  1179e8bf1f3a.js  12083afa09b5.js  125738f79d5e.js  1268687c5ac4.js  126bf4655243.js  12b359f41711.js  12c4a43f34d3.js  13e44b69e939.js  13f15ff493ed.js  140b58b9bc04.js  141eff1a8a07.js  1420de326f9f.js  153ac27563f6.js  1575f7a99d66.js  165c0c8f32ac.js  1696be5896d0.js  (+160 more)
tests/: go_compatibility_test.rs  integration_test.rs  property_tests.rs
(+2100 files in other folders)
